feat: replace slick slider by glide js

--- a/public/index.html
+++ b/public/index.html
@@ -569,11 +569,29 @@
             de santé des autres districts voire des grandes villes (Kamsar, Boké, Conakry,..).</p>
           <span class="block bold italic mt1 text-center hide-s992">(Vous pouvez slider les images vers la droite ou la
             gauche)</span>
-          <div class="slider-nav mt2">
-            <img src="dist/images/old-dispensaire/old-dispensaires-1.JPG" alt="ancien dispensaire ajk 1">
-            <img src="dist/images/old-dispensaire/old-dispensaires-2.JPG" alt="ancien dispensaire ajk 2">
-            <img src="dist/images/old-dispensaire/old-dispensaires-3.JPG" alt="ancien dispensaire ajk 3">
-            <img src="dist/images/old-dispensaire/old-dispensaires-4.JPG" alt="ancien dispensaire ajk 4">
+          <div class="glide mt2">
+            <div class="glide__track" data-glide-el="track">
+              <ul class="glide__slides">
+                <li class="glide__slide"><img src="dist/images/old-dispensaire/old-dispensaires-1.JPG"
+                    alt="ancien dispensaire ajk 1"></li>
+                <li class="glide__slide"><img src="dist/images/old-dispensaire/old-dispensaires-2.JPG"
+                    alt="ancien dispensaire ajk 2"></li>
+                <li class="glide__slide"><img src="dist/images/old-dispensaire/old-dispensaires-3.JPG"
+                    alt="ancien dispensaire ajk 3"></li>
+                <li class="glide__slide"><img src="dist/images/old-dispensaire/old-dispensaires-4.JPG"
+                    alt="ancien dispensaire ajk 4"></li>
+              </ul>
+            </div>
+            <div class="glide__arrows" data-glide-el="controls">
+              <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+              <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+            </div>
+            <div class="glide__bullets" data-glide-el="controls[nav]">
+              <button class="glide__bullet" data-glide-dir="=0"></button>
+              <button class="glide__bullet" data-glide-dir="=1"></button>
+              <button class="glide__bullet" data-glide-dir="=2"></button>
+              <button class="glide__bullet" data-glide-dir="=3"></button>
+            </div>
           </div>
         </div>
         <div class="col-lg-12">
@@ -642,13 +660,35 @@
               cette première phase de construction du pôle pharmacie.</p>
             <span class="block bold italic mt1 text-center hide-s992">(Vous pouvez slider les images vers la droite ou
               la gauche)</span>
-            <div class="slider-nav mt2">
-              <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-1.jpg" alt="nouveau dispensaire ajk 1">
-              <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-2.jpg" alt="nouveau dispensaire ajk 2">
-              <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-3.jpg" alt="nouveau dispensaire ajk 3">
-              <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-4.JPG" alt="nouveau dispensaire ajk 4">
-              <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-5.JPG" alt="nouveau dispensaire ajk 5">
-              <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-6.JPG" alt="nouveau dispensaire ajk 6">
+            <div class="glide mt2">
+              <div class="glide__track" data-glide-el="track">
+                <ul class="glide__slides">
+                  <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-1.jpg"
+                      alt="nouveau dispensaire ajk 1"></li>
+                  <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-2.jpg"
+                    alt="nouveau dispensaire ajk 2"></li>
+                  <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-3.jpg"
+                      alt="nouveau dispensaire ajk 3"></li>
+                  <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-4.JPG"
+                      alt="nouveau dispensaire ajk 4"></li>
+                  <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-5.JPG"
+                      alt="nouveau dispensaire ajk 5"></li>
+                  <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-6.JPG"
+                      alt="nouveau dispensaire ajk 6"></li>
+                </ul>
+              </div>
+              <div class="glide__arrows" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+              </div>
+              <div class="glide__bullets" data-glide-el="controls[nav]">
+                <button class="glide__bullet" data-glide-dir="=0"></button>
+                <button class="glide__bullet" data-glide-dir="=1"></button>
+                <button class="glide__bullet" data-glide-dir="=2"></button>
+                <button class="glide__bullet" data-glide-dir="=3"></button>
+                <button class="glide__bullet" data-glide-dir="=4"></button>
+                <button class="glide__bullet" data-glide-dir="=5"></button>
+              </div>
             </div>
             <div class="mt2">
               <h4 class="service-heading">Pôle Généraliste</h4>
@@ -660,19 +700,54 @@
               <span class="block bold italic mt1 text-center hide-s992">(Vous pouvez slider les images vers la droite ou
                 la
                 gauche)</span>
-              <div class="slider-nav mt2">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-8.JPG" alt="nouveau dispensaire ajk 8">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-9.JPG" alt="nouveau dispensaire ajk 9">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-10.JPG" alt="nouveau dispensaire ajk 10">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-11.JPG" alt="nouveau dispensaire ajk 11">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-12.JPG" alt="nouveau dispensaire ajk 12">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-13.JPG" alt="nouveau dispensaire ajk 13">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-14.JPG" alt="nouveau dispensaire ajk 14">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-15.JPG" alt="nouveau dispensaire ajk 15">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-16.JPG" alt="nouveau dispensaire ajk 16">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-17.JPG" alt="nouveau dispensaire ajk 17">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-18.JPG" alt="nouveau dispensaire ajk 18">
-                <img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-19.JPG" alt="nouveau dispensaire ajk 19">
+              <div class="glide">
+                <div data-glide-el="track" class="glide__track">
+                  <ul class="glide__slides">
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-8.JPG"
+                        alt="nouveau dispensaire ajk 8"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-9.JPG"
+                        alt="nouveau dispensaire ajk 9"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-10.JPG"
+                        alt="nouveau dispensaire ajk 10"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-11.JPG"
+                        alt="nouveau dispensaire ajk 11"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-12.JPG"
+                        alt="nouveau dispensaire ajk 12"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-13.JPG"
+                        alt="nouveau dispensaire ajk 13"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-14.JPG"
+                        alt="nouveau dispensaire ajk 14"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-15.JPG"
+                        alt="nouveau dispensaire ajk 15"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-16.JPG"
+                        alt="nouveau dispensaire ajk 16"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-17.JPG"
+                        alt="nouveau dispensaire ajk 17"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-18.JPG"
+                        alt="nouveau dispensaire ajk 18"></li>
+                    <li class="glide__slide"><img src="dist/images/new-dispensaire/dispensaire-kakande-ajk-19.JPG"
+                        alt="nouveau dispensaire ajk 19"></li>
+                  </ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+                </div>
+                <div class="glide__bullets" data-glide-el="controls[nav]">
+                  <button class="glide__bullet" data-glide-dir="=0"></button>
+                  <button class="glide__bullet" data-glide-dir="=1"></button>
+                  <button class="glide__bullet" data-glide-dir="=2"></button>
+                  <button class="glide__bullet" data-glide-dir="=3"></button>
+                  <button class="glide__bullet" data-glide-dir="=4"></button>
+                  <button class="glide__bullet" data-glide-dir="=5"></button>
+                  <button class="glide__bullet" data-glide-dir="=6"></button>
+                  <button class="glide__bullet" data-glide-dir="=7"></button>
+                  <button class="glide__bullet" data-glide-dir="=8"></button>
+                  <button class="glide__bullet" data-glide-dir="=9"></button>
+                  <button class="glide__bullet" data-glide-dir="=10"></button>
+                  <button class="glide__bullet" data-glide-dir="=11"></button>
+                  <button class="glide__bullet" data-glide-dir="=12"></button>
+                </div>
               </div>
             </div>
           </div>
@@ -692,10 +767,10 @@
       </div>
       <div class="row">
         <div class="col-lg-12 text-center">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/_CvjKNGdqBI" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="row">
@@ -723,10 +798,10 @@
             </li>
           </ul>
           <div class="center">
-            <iframe
+            <!-- <iframe
               src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FAJK-Association-des-Jeunes-de-kakand%C3%A9-1890930947858951%2F&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
               width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-              allowTransparency="true" allow="encrypted-media"></iframe>
+              allowTransparency="true" allow="encrypted-media"></iframe> -->
           </div>
         </div>
         <div class="col-md-6">
@@ -802,9 +877,9 @@
           <p class="mt2">Conformément à la décision de l’Assemblée Générale du 11 septembre 2016, le montant de
             l’adhésion a été fixé à 10€.</p>
           <p>Vous pouvez aussi passez via le lien ci-dessous pour payer directement l'adhesion</p>
-          <iframe id="haWidget" allowtransparency="true"
+          <!-- <iframe id="haWidget" allowtransparency="true"
             src="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/adhesions/adhesion-a-l-association-des-jeunes-de-kakande/widget-bouton"
-            style="width:100%;height:70px;border:none;"></iframe>
+            style="width:100%;height:70px;border:none;"></iframe> -->
         </div>
         <div class="col-lg-12">
           <h3 class="section-subheading text-muted">Faire un don</h3>
@@ -815,9 +890,9 @@
             de changer la vie de plus de 7000 personnes. </p>
           <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>, cliquez sur le bouton ci-dessous.
           </p>
-          <iframe id="haWidget" allowtransparency="true"
+          <!-- <iframe id="haWidget" allowtransparency="true"
             src="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/formulaires/1/widget-bouton"
-            style="width:100%;height:70px;border:none;"></iframe>
+            style="width:100%;height:70px;border:none;"></iframe> -->
         </div>
       </div>
     </div>
