--- a/public/index.html
+++ b/public/index.html
@@ -584,8 +584,8 @@
               </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
-              <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-              <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+              <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+              <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
             </div>
             <div class="glide__bullets" data-glide-el="controls[nav]">
               <button class="glide__bullet" data-glide-dir="=0"></button>
@@ -679,8 +679,8 @@
                 </ul>
               </div>
               <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
               </div>
               <div class="glide__bullets" data-glide-el="controls[nav]">
                 <button class="glide__bullet" data-glide-dir="=0"></button>
@@ -729,8 +729,8 @@
                   </ul>
                 </div>
                 <div class="glide__arrows" data-glide-el="controls">
-                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+                  <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                  <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
                 </div>
                 <div class="glide__bullets" data-glide-el="controls[nav]">
                   <button class="glide__bullet" data-glide-dir="=0"></button>
