--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                   <li>Houda TOURE</li>
                   <li>Ibrahim TOURE</li>
                   <li>Mimi DIAOUNE</li>
+                  <li>Yadali DIABY</li>
                 </ul>
                 <ul class="col-md-6 text-muted listNone">
                   <li>Mariama CISSE</li>
@@ -177,6 +178,7 @@
                   <li>Tigui TOURE</li>
                   <li>Néne DIABY</li>
                   <li>Karim DIABY</li>
+                  <li>Souleymane Touré</li>
                 </ul>
               </div>
             </div>
@@ -628,11 +630,8 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <div class="video-container">
-              <iframe width="560"
-                      height="315"
-                      src="https://www.youtube.com/embed/_CvjKNGdqBI"
-                      frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/EdRtj_xDohw" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -655,7 +654,7 @@
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
                   </span>
-                  Suivez notre activité sur Facebook&nbsp;!
+                  Suivez nos activités sur Facebook&nbsp;!
                 </a>
               </li>
             </ul>
@@ -736,6 +735,14 @@
             de changer la vie de plus de 7000 personnes. </p>
             <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>, cliquez sur le bouton ci-dessous.</p>
             <iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/formulaires/1/widget-bouton" style="width:100%;height:70px;border:none;"></iframe>
+          </div>
+          <div class="col-lg-12">
+            <h3 class="section-subheading text-muted">Participer à la cagnotte en ligne</h3>
+            <div class="text-center">
+              <p>Nous avons aussi ouvert une cagnotte en ligne avec CotizUp. N'hésitez pas à la faire partager !</p>
+              <a class="btn btn-primary btn-xl text-uppercase" href="https://www.cotizup.com/dispensaire-kakande" target="_blank">Je
+                participe</a>
+            </div>
           </div>
         </div>
       </div>
