--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
   <!-- Custom styles for this template -->
   <link href="dist/css/app.css" rel="stylesheet">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123646088-1"></script>
   <script>
@@ -36,6 +38,14 @@
 
     gtag('config', 'UA-123646088-1');
   </script> -->
+
+  <script>
+    WebFont.load({
+      google: {
+        families: ['Montserrat']
+      }
+    });
+  </script>
 
 </head>
 
@@ -529,7 +539,7 @@
               <span class="block bold italic mt1">Carte du village de Dabankou vue du ciel</span>
             </div>
             <p>
-              <img class="left-s768 responsive-map-img mr1-s768 roundbox boxShadow lazyload"
+              <img class="left-s768 responsive-map-img mb1 mr1-s768 roundbox boxShadow lazyload"
                 data-src="dist/images/project/dabankou-map.png" alt="dabankou-map">
               Les habitants du village manquent de moyen ; ils sont généralement agriculteurs et cultivent arachides,
               piments, aubergines,
@@ -805,7 +815,6 @@
                   <i class="fa fa-circle fa-stack-2x text-primary"></i>
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                 </span>
-                <span class="follow-us--text">contact@associationjeuneskakande.org</span>
               </a>
             </li>
             <li>
@@ -815,24 +824,38 @@
                   <i class="fa fa-circle fa-stack-2x text-primary"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
                 </span>
-                <span class="follow-us--text">Suivez notre activité sur Facebook&nbsp;!</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/association.ajk/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x text-primary"></i>
                   <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                 </span>
-                <span class="follow-us--text">Suivez-nous sur Instagram !</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/ajk_association" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/channel/UCLvj9n7eiTphuqb_oaZTMxA" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
+                </span>
               </a>
             </li>
           </ul>
-          <div class="center">
-            <!-- <iframe
+          <div class="iframe-container center">
+            <iframe
               src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FAJK-Association-des-Jeunes-de-kakand%C3%A9-1890930947858951%2F&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
               width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-              allowTransparency="true" allow="encrypted-media"></iframe> -->
+              allowTransparency="true" allow="encrypted-media"></iframe>
           </div>
         </div>
         <div class="col-md-6">
@@ -883,8 +906,9 @@
             </span>
             Soutenez notre projet en devenant partenaire financier ou par le biais d’un don matériel ! <br />
             Définissons ensemble un partenariat qui nous ressemble ! <br />
-            Contactez-nous par mail <a
-              href="mailto:contact@associationjeuneskakande.org">contact@associationjeuneskakande.org</a><br />
+            Contactez-nous par mail <span class="mobile-only"></span><a
+              href="mailto:contact@associationjeuneskakande.org" class="
+              mobile-font-size">contact@associationjeuneskakande.org</a><br />
             Ou par téléphone – Responsable Partenariat au 06.15.37.29.52
         </div>
         <div class="col-lg-12">
@@ -918,7 +942,7 @@
             depuis trop longtemps
             du manque d’infrastructure sanitaire convenable. Participer et soutenez-nous dans cette aventure
             humanitaire, qui permettra
-            de changer la vie de plus de 7000 personnes. </p>
+            de changer la vie de plus de 7000 personnes sans compter les villages alentours.</p>
           <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>, cliquez sur le bouton ci-dessous.
           </p>
           <!-- <iframe id="haWidget" allowtransparency="true"
@@ -982,35 +1006,42 @@
   <footer>
     <div class="container">
       <div class="row text-color_white">
-        <div class="col-md-4">
+        <div class="col-lg-8">
+          <div class="row">
+            <div class="col-md-6">
+              <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="https://www.facebook.com/AJK-Association-des-Jeunes-de-kakand%C3%A9-1890930947858951/" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.instagram.com/association.ajk/" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://www.youtube.com/channel/UCLvj9n7eiTphuqb_oaZTMxA" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="https://twitter.com/ajk_association" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+            </div>
+            <div class="col-md-6">
+              <ul class="list-inline quicklinks">
+                <li class="list-inline-item">
+                  <a href="mailto:contact@associationjeuneskakande.org">contact@associationjeuneskakande.org</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
           <span class="copyright">Copyright 2020 &copy; AJK - Tous droits réservés</span>
-        </div>
-        <div class="col-md-4">
-          <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/AJK-Association-des-Jeunes-de-kakand%C3%A9-1890930947858951/"
-                target="_blank">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" target="_blank">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.youtube.com/channel/UCLvj9n7eiTphuqb_oaZTMxA" target="_blank">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <ul class="list-inline quicklinks">
-            <li class="list-inline-item">
-              <a target="_blank" href="https://www.linkedin.com/in/slimane-gassama-088b0291/">Webmaster</a>
-            </li>
-          </ul>
         </div>
       </div>
     </div>
@@ -1316,7 +1347,6 @@
 
   <script src="dist/js/vendor.js"></script>
   <script src="dist/js/app.js"></script>
-
 </body>
 
 </html>
