--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123646088-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123646088-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -37,7 +37,7 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-123646088-1');
-  </script> -->
+  </script>
 
   <script>
     WebFont.load({
@@ -932,9 +932,9 @@
           <p class="mt2">Conformément à la décision de l’Assemblée Générale du 11 septembre 2016, le montant de
             l’adhésion a été fixé à 10€.</p>
           <p>Vous pouvez aussi passez via le lien ci-dessous pour payer directement l'adhesion</p>
-          <!-- <iframe id="haWidget" allowtransparency="true"
+          <iframe id="haWidget" allowtransparency="true"
             src="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/adhesions/adhesion-a-l-association-des-jeunes-de-kakande/widget-bouton"
-            style="width:100%;height:70px;border:none;"></iframe> -->
+            style="width:100%;height:70px;border:none;"></iframe>
         </div>
         <div class="col-lg-12">
           <h3 class="section-subheading text-muted">Faire un don</h3>
@@ -945,9 +945,9 @@
             de changer la vie de plus de 7000 personnes sans compter les villages alentours.</p>
           <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>, cliquez sur le bouton ci-dessous.
           </p>
-          <!-- <iframe id="haWidget" allowtransparency="true"
+          <iframe id="haWidget" allowtransparency="true"
             src="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/formulaires/1/widget-bouton"
-            style="width:100%;height:70px;border:none;"></iframe> -->
+            style="width:100%;height:70px;border:none;"></iframe>
         </div>
       </div>
     </div>
