--- a/public/index.html
+++ b/public/index.html
@@ -930,11 +930,11 @@
             75018 Paris
           </p>
           <p class="mt2">Conformément à la décision de l’Assemblée Générale du 11 septembre 2016, le montant de
-            l’adhésion a été fixé à 10€.</p>
+            l’adhésion a été fixé à 20€ annuelle et individuelle.</p>
           <p>Vous pouvez aussi passez via le lien ci-dessous pour payer directement l'adhesion</p>
-          <iframe id="haWidget" allowtransparency="true"
-            src="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/adhesions/adhesion-a-l-association-des-jeunes-de-kakande/widget-bouton"
-            style="width:100%;height:70px;border:none;"></iframe>
+          <div class="text-center">
+            <a href="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/adhesions/adhesion-a-l-association-des-jeunes-de-kakande" class="btn btn-primary btn-xl text-uppercase" target="_blank">Adhérer</a>
+          </div>
         </div>
         <div class="col-lg-12">
           <h3 class="section-subheading text-muted">Faire un don</h3>
@@ -945,9 +945,11 @@
             de changer la vie de plus de 7000 personnes sans compter les villages alentours.</p>
           <p>Pour faire un don à l'<strong>ASSOCIATION DES JEUNES DE KAKANDÉ</strong>, cliquez sur le bouton ci-dessous.
           </p>
-          <iframe id="haWidget" allowtransparency="true"
-            src="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/formulaires/1/widget-bouton"
-            style="width:100%;height:70px;border:none;"></iframe>
+          <div class="text-center">
+            <a href="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/formulaires/1/widget" class="btn btn-primary btn-xl text-uppercase" target="_blank">
+              Faire un don
+            </a>
+          </div>
         </div>
       </div>
     </div>
