feat: add new section for project dispensary

--- a/public/index.html
+++ b/public/index.html
@@ -365,7 +365,23 @@
               <img class="img-fluid lazyload" data-src="dist/images/portfolio/travaux-ajk-generaliste-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Démarrage de la construction du pôle généraliste</h4>
+              <h4>1<sup>ère</sup> phase de construction du pôle généraliste</h4>
+              <p class="text-muted">Pôle généraliste</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="portfolio-card boxShadow">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid lazyload" data-src="dist/images/portfolio/travaux-ajk-generaliste-2-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>2<sup>ème</sup> phase de construction du pôle généraliste</h4>
               <p class="text-muted">Pôle généraliste</p>
             </div>
           </div>
@@ -472,7 +488,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <span class="d-block bold date-title">Janvier 2019</span>
-                  <h4 class="subheading">Démarrage de la construction du pôle généraliste</h4>
+                  <h4 class="subheading">1<sup>ère</sup> phase de construction du pôle généraliste</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">Pôle Généraliste</p>
@@ -480,6 +496,20 @@
               </div>
             </li>
             <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid lazyload" data-src="dist/images/about/travaux-ajk-3.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <span class="d-block bold date-title">Juillet 2020</span>
+                  <h4 class="subheading">2<sup>ème</sup> phase de construction du pôle généraliste</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Pôle Généraliste</p>
+                </div>
+              </div>
+            </li>
+            <li>
               <div class="timeline-image">
                 <h4>Notre
                   <br>Aventure
@@ -684,10 +714,10 @@
             <h3 class="section-subheading text-muted">Début des travaux de construction</h3>
             <p>Grace aux dons récoltés lors de notre diner de charité du 7 Octobre 2017, nous avons pu entamer les
               travaux. La construction
-              a débutée par le pôle pharmacie, qui a également servi de chantier école.</p>
+              a débuté par le pôle pharmacie, qui a également servi de chantier école.</p>
             <div class="mt-4">
               <h4 class="service-heading">Pôle Pharmacie</h4>
-              <p>Le chantier école à débuter avec le recrutement des jeunes et de travailleurs qualifiés car étant la
+              <p>Le chantier école a débuté avec le recrutement des jeunes et de travailleurs qualifiés car étant la
                 partie la plus
                 importante du projet, elle est consacrée à la formation des jeunes bénévoles et à de nouvelles méthodes de
                 construction
@@ -728,11 +758,12 @@
               </div>
               <div class="mt-4">
                 <h4 class="service-heading">Pôle Généraliste</h4>
-                <p>La seconde étape est enclenchée ! Fort de cette première expérience, nous avons démarré la construction
+                <p class="bold">1<sup>ère</sup> phase</p>
+                <p>La seconde étape est enclenchée ! Fort de cette première expérience, nous avons démarré la 1<sup>ère</sup> de construction
                   du pôle
-                  généraliste du futur centre de santé. C'est avec entrain que les ouvriers et les jeunes des villages ont
+                  généraliste. C'est avec entrain que les ouvriers et les jeunes des villages ont
                   pu mettre en
-                  pratique la formation aux différentes techniques de construction acquises lors du chantier école.</p>
+                  pratique la formation aux différentes techniques de construction acquises lors du chantier école. Cette phase se terminera par la pose complète des murs et de la toiture.</p>
                 <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
                 <div class="glide mt-4">
                   <div data-glide-el="track" class="glide__track">
@@ -783,6 +814,62 @@
                     <button class="glide__bullet" data-glide-dir="=12"></button>
                   </div>
                 </div>
+                <p class="mt-4 bold">2<sup>ème</sup> phase</p>
+                <p>Place à la troisième étape ! Nous avons opéré un changement d’architecture au niveau de la toiture des bâtiments en construction 
+                  (y compris le pôle pharmacie) pour une plus grande flexibilité.
+                  Un petit plus pour ce pôle généraliste : un banc extérieur a été ajouter sous la véranda.</p>
+                <span class="block bold italic mt-3 text-center d-md-none">(Vous pouvez slider les images vers la droite ou la gauche)</span>
+                <div class="glide mt-4">
+                  <div data-glide-el="track" class="glide__track">
+                    <ul class="glide__slides">
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-20.jpg"
+                          alt="nouveau dispensaire ajk 20"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-21.jpg"
+                          alt="nouveau dispensaire ajk 21"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-22.jpg"
+                          alt="nouveau dispensaire ajk 22"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-23.jpg"
+                          alt="nouveau dispensaire ajk 23"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-25.JPG"
+                          alt="nouveau dispensaire ajk 25"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-26.JPG"
+                          alt="nouveau dispensaire ajk 26"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-28.jpg"
+                          alt="nouveau dispensaire ajk 28"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-30.jpg"
+                          alt="nouveau dispensaire ajk 30"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-31.jpg"
+                          alt="nouveau dispensaire ajk 31"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-32.jpg"
+                          alt="nouveau dispensaire ajk 32"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-35.jpg"
+                          alt="nouveau dispensaire ajk 35"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-36.jpg"
+                          alt="nouveau dispensaire ajk 36"></li>
+                      <li class="glide__slide"><img class="lazyload" data-src="dist/images/new-dispensaire/dispensaire-kakande-ajk-37.jpg"
+                          alt="nouveau dispensaire ajk 37"></li>
+                    </ul>
+                  </div>
+                  <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i class="fas fa-angle-left"></i></button>
+                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i class="fas fa-angle-right"></i></button>
+                  </div>
+                  <div class="glide__bullets" data-glide-el="controls[nav]">
+                    <button class="glide__bullet" data-glide-dir="=0"></button>
+                    <button class="glide__bullet" data-glide-dir="=1"></button>
+                    <button class="glide__bullet" data-glide-dir="=2"></button>
+                    <button class="glide__bullet" data-glide-dir="=3"></button>
+                    <button class="glide__bullet" data-glide-dir="=4"></button>
+                    <button class="glide__bullet" data-glide-dir="=5"></button>
+                    <button class="glide__bullet" data-glide-dir="=6"></button>
+                    <button class="glide__bullet" data-glide-dir="=7"></button>
+                    <button class="glide__bullet" data-glide-dir="=8"></button>
+                    <button class="glide__bullet" data-glide-dir="=9"></button>
+                    <button class="glide__bullet" data-glide-dir="=10"></button>
+                    <button class="glide__bullet" data-glide-dir="=11"></button>
+                    <button class="glide__bullet" data-glide-dir="=12"></button>
+                    <button class="glide__bullet" data-glide-dir="=13"></button>
+                  </div>
               </div>
             </div>
           </div>
@@ -931,7 +1018,7 @@
           </p>
           <p class="mt-4">Conformément à la décision de l’Assemblée Générale du 11 septembre 2016, le montant de
             l’adhésion a été fixé à 20€ annuelle et individuelle.</p>
-          <p>Vous pouvez aussi passez via le lien ci-dessous pour payer directement l'adhesion</p>
+          <p>Vous pouvez aussi passez via le lien ci-dessous pour adhérer facilement</p>
           <div class="text-center">
             <a href="https://www.helloasso.com/associations/association-des-jeunes-de-kakande/adhesions/adhesion-a-l-association-des-jeunes-de-kakande" class="btn btn-primary btn-xl text-uppercase" target="_blank">Adhérer</a>
           </div>
@@ -1032,6 +1119,7 @@
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
+              </ul>
             </div>
             <div class="col-md-6">
               <ul class="list-inline quicklinks">
@@ -1298,6 +1386,7 @@
                   qui a servi de chantier école.</p>
                 <ul class="list-inline">
                   <li>Date: Février 2018</li>
+                  <li>Fin: Juillet 2018</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fa fa-times"></i>
@@ -1327,14 +1416,46 @@
                 <h2 class="text-uppercase">Démarrage des travaux du pôle généraliste</h2>
                 <p class="item-intro text-muted">Pôle Généraliste</p>
                 <img class="img-fluid d-block mx-auto lazyload" data-src="dist/images/portfolio/travaux-ajk-generaliste-full.jpg" alt="">
-                <p>La seconde étape est enclenchée ! Forte de cette première expérience, nous avons démarré la
+                <p>La seconde étape est enclenchée ! Forte de cette première expérience, nous avons démarré la 1<sup>ère</sup> phase de
                   construction du pôle
-                  généraliste du futur centre de santé. C'est avec entrain que les ouvriers et les jeunes des villages
+                  généraliste. C'est avec entrain que les ouvriers et les jeunes des villages
                   ont pu mettre en
-                  pratique la formation aux différentes techniques de construction acquises lors du chantier école.</p>
+                  pratique la formation aux différentes techniques de construction acquises lors du chantier école. Cette phase se terminera par la pose complète des murs et de la toiture.</p>
                 <ul class="list-inline">
                   <li>Date: Janvier 2019</li>
-                  <li>Travaux en cours</li>
+                  <li>Fin: Mai 2020</li>
+                </ul>
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fa fa-times"></i>
+                  Fermer</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal 8 -->
+  <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <h2 class="text-uppercase">Seconde phase des travaux du pôle généraliste</h2>
+                <p class="item-intro text-muted">Pôle Généraliste</p>
+                <img class="img-fluid d-block mx-auto lazyload" data-src="dist/images/portfolio/travaux-ajk-generaliste-2-full.jpg" alt="">
+                <p>Place à la troisième étape ! Nous avons opéré un changement d’architecture au niveau de la toiture des bâtiments en construction (y compris le pôle pharmacie) pour une plus grande flexibilité. Un petit plus pour ce pôle généraliste : un banc extérieur a été ajouter sous la véranda.</p>
+                <ul class="list-inline">
+                  <li>Date: Juillet 2020</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fa fa-times"></i>
